--- a/public/index.html
+++ b/public/index.html
@@ -127,11 +127,11 @@
     <div id="dashboard" class="dashboard-container" style="display: none;">
         <main>
             <div class="container">
-                 <div class="feature-icon">
-                                 <img src="/assets/Honey_badger_tv.svg" alt="Honey Badger Gift" class="gift-icon" id="bodyGift">
-                            </div>
+                
                 <div class="dashboard-header">
-                    
+                     <div class="feature-icon">
+                                 <img src="/assets/Honey_Badger_tv.svg" alt="Honey Badger TV" class="gift-icon" id="bodyGift">
+                            </div>
                     <h1>🍯 Your Honey Badger Dashboard</h1>
                     <p>Welcome back! Here's what's happening with your honey badgers.</p>
                 </div>
