--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
                 
                 <div class="dashboard-header">
                      <div class="feature-icon">
-                                 <img src="/assets/Honey_Badger_tv.svg" alt="Honey Badger TV" class="gift-icon" id="bodyGift">
+                                 <img src="/assets/Honey_Badger_tv.svg" alt="Honey Badger TV" class="tv-icon" id="bodyGift">
                             </div>
                     <h1>🍯 Your Honey Badger Dashboard</h1>
                     <p>Welcome back! Here's what's happening with your honey badgers.</p>
