--- a/public/index.html
+++ b/public/index.html
@@ -132,8 +132,7 @@
                      <div class="feature-icon">
                                  <img src="/assets/Honey_Badger_tv.svg" alt="Honey Badger TV" class="tv-icon" id="bodyGift">
                             </div>
-                    <h1>🍯 Your Honey Badger Dashboard</h1>
-                    <p>Welcome back! Here's what's happening with your honey badgers.</p>
+                    <h1>Welcome back! Here's what's happening with your honey badgers.</h1>
                 </div>
 
                 <div class="dashboard-grid">
