--- a/public/index.html
+++ b/public/index.html
@@ -138,14 +138,14 @@
                     <!-- Left Panel - Recent Activity -->
                     <div class="dashboard-left">
                         <div class="activity-section">
-                            <h2>📤 Recently Sent</h2>
+                            <h2>📤 Badgers In the Wild</h2>
                             <div id="sentBadgersList" class="badgers-list">
                                 <!-- Sent badgers will be populated here -->
                             </div>
                         </div>
 
                         <div class="activity-section">
-                            <h2>📥 Recently Received</h2>
+                            <h2>📥 Your Badgers</h2>
                             <div id="receivedBadgersList" class="badgers-list">
                                 <!-- Received badgers will be populated here -->
                             </div>
