--- a/public/index.html
+++ b/public/index.html
@@ -162,6 +162,9 @@
                     <div class="dashboard-right">
                         <div class="send-panel">
                             <div class="send-header">
+                                 <div class="feature-icon">
+                                 <img src="/assets/honey_badger.svg" alt="Honey Badger TV" class="avatar-icon" id="bodyGift">
+                    </div>
                                 <div class="send-title">
                                     <h2>Send a Honey Badger</h2>
                                     <p class="send-subtitle">Deploy AI Honey Badger to your network</p>
