--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
                         <div class="send-panel">
                             <div class="send-header">
                                  <div class="feature-icon">
-                                 <img src="/assets/honey_badger.svg" alt="Honey Badger TV" class="avatar-icon" id="bodyGift">
+                                 <img src="/assets/honeycomb_badger.svg" alt="Honey Badger" class="avatar-icon" id="bodyGift">
                     </div>
                                 <div class="send-title">
                                     <h2>Send a Honey Badger</h2>
