Move honeycomb_badger.svg image inline with "Send a Honey Badger" text and resize to match text size

--- a/public/index.html
+++ b/public/index.html
@@ -162,11 +162,11 @@
                     <div class="dashboard-right">
                         <div class="send-panel">
                             <div class="send-header">
-                                 <div class="feature-icon">
-                                 <img src="/assets/honeycomb_badger.svg" alt="Honey Badger" class="avatar-icon" id="bodyGift">
-                    </div>
                                 <div class="send-title">
-                                    <h2>Send a Honey Badger</h2>
+                                    <h2 class="title-with-icon">
+                                        <img src="/assets/honeycomb_badger.svg" alt="Honey Badger" class="inline-badger-icon">
+                                        Send a Honey Badger
+                                    </h2>
                                     <p class="send-subtitle">Deploy AI Honey Badger to your network</p>
                                 </div>
                             </div>
