--- a/public/index.html
+++ b/public/index.html
@@ -400,7 +400,7 @@
 
                         <!-- Badgers In the Wild -->
                         <div class="activity-section">
-                            <h2>📤 Badgers In the Wild</h2>
+                            <h2>Badgers In the Wild</h2>
 
                             <!-- Honey Badger TV -->
                             <div class="tv-container">
@@ -422,7 +422,7 @@
                 <!-- Your Network - Full Width Section -->
                 <div class="network-section-full-width">
                     <div class="activity-section">
-                        <h2>🌍 Your Network</h2>
+                        <h2>Your Network</h2>
                         <div id="networkList" class="badgers-list">
                             <!-- Network will be populated here -->
                         </div>
